--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# csv files since our CSVs are too large to commit to Github
+.csv
+
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
